--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <base href="./"/> <!-- 关键：确保 file:// 运行时能正确解析 -->
+  <base href="./"/>
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <meta name="theme-color" content="#000000"/>
   <meta name="description" content="AI Lounge App"/>
 
-  <link rel="icon" href="favicon.ico"/>
-  <link rel="apple-touch-icon" href="logo192.png"/>
+  <link rel="icon" href="logo.ico"/>
+  <link rel="apple-touch-icon" href="logo_256x256.png"/>
   <link rel="manifest" href="manifest.json"/>
 
   <title>AI Lounge</title>
