install new model function in progress

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8"/>
   <meta name="viewport" content="width=device-width,initial-scale=1"/>
   <meta name="theme-color" content="#000000"/>
-  <meta name="description" content="AI Lounge App"/>
+  <meta name="description" content="PuPu"/>
 
   <link rel="icon" href="logo.ico"/>
   <link rel="apple-touch-icon" href="logo_256x256.png"/>
