--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
   <link rel="apple-touch-icon" href="logo_256x256.png"/>
   <link rel="manifest" href="manifest.json"/>
 
-  <title>AI Lounge</title>
+  <title>PuPu</title>
 </head>
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
